<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/dashboard"
        android:title="@string/dashboard"
        android:icon="@drawable/ic_dashboard_black_18dp"
        />

    <item android:id="@+id/list"
        android:title="@string/list_of_tests"
        android:icon="@drawable/ic_list_black_18dp"/>

    <item
        android:id="@+id/placeholder"
        android:title="" />

    <item android:id="@+id/map_list_sites"
        android:title="@string/list_of_places"
        android:icon="@drawable/ic_map_24px"/>

    <item android:id="@+id/contacts"
        android:title="@string/contacts"
        android:icon="@drawable/ic_contacts_black_18dp"/>


</menu>