<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.AddExamFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/cardview_light_background"
            android:layout_marginTop="12dp"
            android:textSize="24sp"
            android:text="@string/select_date"
         />

        <TextView
            android:id="@+id/date_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:background="@color/cardview_light_background"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/date_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:text="@string/add_exam_date"/>

        <LinearLayout
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:background="@color/cardview_light_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:text="@string/resultado"/>


        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/positivo"
            android:textSize="20sp"
            android:textStyle="bold"/>


        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField_placeOfTest"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:hint="@string/local_de_teste">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>


        <ImageButton
            android:id="@+id/registration_image"
            android:layout_marginTop="12dp"
            android:scaleType="fitXY"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="175dp"
            android:layout_marginEnd="1dp"
            android:src="@drawable/missing_file_icon_on_white_background"
            android:contentDescription="@string/add_exam_picture" />

        <Button
            android:id="@+id/conclude_registration_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:backgroundTint="#383936"
            android:layout_gravity="center"
            android:text="@string/concluir_registo_de_teste"
            />

    </LinearLayout>

</FrameLayout>