<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ExamDetailsFragment">

    <LinearLayout
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginTop="50dp"
        android:layout_gravity="start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/exam_date"/>

        <TextView
            android:id="@+id/details_test_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_gravity="start"
        android:layout_marginTop="100dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/name_of_testing_site"/>

        <TextView
            android:id="@+id/details_test_place"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            />

    </LinearLayout>

    <LinearLayout
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_gravity="start"
        android:layout_marginTop="150dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/tests_result"/>

        <TextView
            android:id="@+id/details_test_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            />

    </LinearLayout>

    <ImageButton
        android:id="@+id/image_zoom_button"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:layout_gravity="center"
        android:layout_marginEnd="1dp"
        android:layout_marginTop="50dp"
        android:scaleType="centerCrop"
        android:src="@drawable/text_document"
        android:contentDescription="@string/description_image"
         />

    <ImageView
        android:id="@+id/expanded_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="-190dp"
        android:layout_marginBottom="270dp"
        android:src="@drawable/text_document"
        android:contentDescription="@string/zoom_touch_close"
        android:visibility="invisible" />

</FrameLayout>