<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="horizontal"
              android:padding="8dp"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

  <LinearLayout
      android:background="@android:color/background_light"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:padding="2dp"
      android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textStyle="bold"
          android:textSize="20sp"
          android:text="@string/date" />

      <TextView
          android:id="@+id/text_date"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"

          android:textSize="20sp"
          tools:text="@tools:sample/lorem[3]" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textStyle="bold"
          android:textSize="20sp"
          android:text="@string/result"/>

      <TextView
          android:id="@+id/text_result"
          android:layout_width="wrap_content"

          android:textSize="20sp"
          android:layout_height="wrap_content"
          tools:text="@tools:sample/lorem[4]" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textStyle="bold"
          android:textSize="20sp"
          android:text="@string/testing_site"/>

      <TextView
          android:id="@+id/text_placeOfTest"
          android:textSize="20sp"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          tools:text="@tools:sample/lorem[5]" />

    </LinearLayout>


  </LinearLayout>

</LinearLayout>