<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.DashboardFragment"
    >

    <LinearLayout
        android:id="@+id/grid_state"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hello_dashboard_fragment"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textAlignment="center"/>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:rowCount="3"
            android:columnCount="2"
            android:alignmentMode="alignMargins"
            android:layout_gravity="center_horizontal"
            android:columnOrderPreserved="false">

            <androidx.cardview.widget.CardView
                android:layout_width="190dp"
                android:layout_height="145dp"
                android:layout_margin="8dp"
                app:cardBackgroundColor="@color/black"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/active_cases"
                        android:textColor="@color/grey"
                        android:textSize="20sp" />


                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_coronavirus_24px" />


                    <TextView
                        android:id="@+id/active_cases_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/SNS_number"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:textSize="16sp" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="190dp"
                android:layout_height="145dp"
                android:layout_margin="8dp"
                app:cardBackgroundColor="@color/black"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textAlignment="center"
                        android:text="@string/casos_confirmados"
                        android:textColor="@color/grey"
                        android:textSize="20sp" />

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_baseline_check_24" />

                    <TextView
                        android:id="@+id/confirmed_cases_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/SNS_number"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:textSize="16sp" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="190dp"
                android:layout_height="145dp"
                android:layout_margin="8dp"
                app:cardBackgroundColor="@color/black"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textAlignment="center"
                        android:text="@string/mortes_atuais"
                        android:textColor="@color/grey"
                        android:textSize="20sp" />

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_medical_skull_icon_147358" />


                    <TextView
                        android:id="@+id/deaths_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/SNS_number"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:textSize="16sp" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="190dp"
                android:layout_height="145dp"
                android:layout_margin="8dp"
                app:cardBackgroundColor="@color/black"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/pessoas_no_hospital"
                        android:textColor="@color/grey"
                        android:textAlignment="center"
                        android:textSize="20sp" />

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_baseline_hospital_24" />

                    <TextView
                        android:id="@+id/people_hospital_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/SNS_number"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:textSize="16sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="190dp"
                android:layout_height="145dp"
                android:layout_margin="8dp"
                app:cardBackgroundColor="@color/black"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/casos_recuperados"
                        android:textAlignment="center"
                        android:textColor="@color/grey"
                        android:textSize="20sp" />

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_bandage_aid_band_treatment_injury_icon_icons_com_65913" />

                    <TextView
                        android:id="@+id/recovered_cases_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/SNS_number"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:textSize="16sp" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="190dp"
                android:layout_height="145dp"
                android:layout_margin="8dp"
                app:cardBackgroundColor="@color/black"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textAlignment="center"
                        android:text="@string/pessoas_nos_cuidados_intensivos"
                        android:textColor="@color/grey"
                        android:textSize="20sp" />

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_coronavirus_covid_case_patient_hospital_treatment_icon_144005" />

                    <TextView
                        android:id="@+id/people_ICU_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/SNS_number"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:textSize="16sp" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </GridLayout>

    </LinearLayout>


</FrameLayout>